--- a/project05/styles.css
+++ b/project05/styles.css
@@ -1,31 +1,125 @@
 body {
-    background-color: #F9F8F4;
-    color: #544E4E;
-    font-family: Verdana, sans-serif;
+    background-color: white;
+    color: black;
+    display: grid;
 }
 
-.evenrow {
-    background-color:lightgrey
+.header {
+    top: auto;
+    left: auto;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-h1, h2 {   
-    color:#495E48;
-}
-
-a {
-    color:#5C715E; 
-} 
-
-nav {
-    background-color: #A79F9F;
-    padding: 10px;
-    margin-bottom: 30px;
+.logo {
+   font-size: 50px;
+   color: darkgrey;
+   font-weight: 450;
+   text-decoration: none;
 }
 
 nav a {
-    color: #524E4E;
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+    margin-right: 10px;
+    font-family: Arial, Helvetica, sans-serif;     
 }
 
 nav a:hover {
-    background-color: #C5C0BF;
+    color: darkgrey   
 }
+
+.intro {
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    font-weight: normal;
+    font-size: 18px;
+}
+
+.button-box a {
+    padding: 16px 10px;
+    margin-top: 12px;
+    background: black;
+    border: 1px solid black;
+    font-size: 16px;
+    font-weight: 600;
+    color:white;
+    text-decoration: none;
+    letter-spacing: .5px;
+    display:inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-box a:hover {
+    background: darkgray;
+    color: white;
+    transition: width 0.2s ease-in-out, background-color 0.2s ease-in-out;   
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 24px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.project-card {
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+
+.project-card a {
+    display: block;
+    position: relative;
+}
+
+.project-card img {
+    width: 100%;
+    display: block;
+    transition: transform 0.3s;
+}
+
+.project-card .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+    text-align: center;
+    padding: 0 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+}
+
+.project-card:hover .overlay {
+    opacity: 1;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+}
+
+.project-card:hover img {
+    transform: scale(1.05);
+}
+
+
