--- a/project7/styles.css
+++ b/project7/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .logo {
-   font-size: 50px;
+   font-size: clamp(1.5rem, 5vw, 3rem);
    color: darkgrey;
    font-weight: 450;
    text-decoration: none;
@@ -44,10 +44,32 @@ nav a:hover {
     color: darkgrey
 }
 
+@media (max-width: 768px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        background-color: rgb(238, 238, 238);
+        padding: 10px 20px;
+        border-radius: 8px 0 0 8px;
+        
+    }
+
+    nav a {
+        display: block;
+        width: max-content;
+        padding: 10px;
+        text-align: center;
+    }
+
+}
+
 .intro {
-    height: 50vh;
+    min-height: 50vh;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     padding: 20px;
 }
 
@@ -160,7 +182,7 @@ h2 {
         grid-column: span 1;
     }
 
-    .project-card .large {
+    .project-card.large {
         grid-column: 1 / -1;
     }
 }
@@ -178,7 +200,7 @@ h2 {
         grid-column: 1 / -1;
     }
     
-    .project-card .large {
+    .project-card.large {
         grid-column: 1 / -1;
       
     }
@@ -198,7 +220,22 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
+    padding: 0.5rem 0;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 600px) {
+    .footer-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .right {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+    }
 }
             
 .right {
@@ -224,11 +261,6 @@ footer {
 
 h4 {
     font-weight: 50;
-    font-size: 75%;
+    font-size: 75%;  
 }
-
-
-
-
-
 
